@@ -13,6 +13,11 @@ import com.atlassian.sal.api.message.I18nResolver;
 import com.atlassian.scheduler.JobRunnerResponse;
 import com.atlassian.scheduler.SchedulerService;
 import com.atlassian.scheduler.config.*;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.util.*;
+import java.util.stream.Collectors;
+import javax.naming.NoPermissionException;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.Nullable;
@@ -29,15 +34,6 @@ import ru.mail.jira.plugins.myteam.db.repository.ReminderRepository;
 import ru.mail.jira.plugins.myteam.myteam.dto.InlineKeyboardMarkupButton;
 import ru.mail.jira.plugins.myteam.service.ReminderService;
 import ru.mail.jira.plugins.myteam.service.UserChatService;
-
-import javax.naming.NoPermissionException;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
-import java.time.format.DateTimeFormatter;
-import java.time.temporal.ChronoUnit;
-import java.util.*;
-import java.util.stream.Collectors;
 
 @Component
 @ExportAsService
@@ -199,12 +195,7 @@ public class ReminderServiceImpl implements LifecycleAware, DisposableBean, Remi
                 "ru.mail.jira.plugins.myteam.mrimsenderEventListener.quickViewButton.text"),
             String.join("-", CommandRuleType.Issue.getName(), issueKey)));
 
-    List<String> args =
-        new ArrayList<>(
-            Arrays.asList(
-                issueKey,
-                DateTimeFormatter.ISO_OFFSET_DATE_TIME.format(
-                    ZonedDateTime.ofInstant(r.getDate().toInstant().plus(1, ChronoUnit.DAYS), ZoneId.systemDefault()))));
+    List<String> args = new ArrayList<>(List.of(issueKey));
 
     if (r.getDescription() != null && r.getDescription().trim().length() > 0) {
       args.add(r.getDescription());
